docs/dev/grammar.ebnf
/* TL Language Grammar Definition (EBNF) */

/*
 * Note: This grammar describes the structure of the TL language
 * as implemented in src/compiler/parser.rs and src/compiler/ast.rs.
 * It uses a standard EBNF notation.
 * - { ... } indicates repetition (0 or more times).
 * - [ ... ] indicates optional elements.
 * - ( ... ) indicates grouping.
 * - | indicates alternatives.
 * - "..." indicates terminal symbols (tokens).
 *
 * Last synchronized: 2026-03-13
 */

/* ========================================================================== */
/* Lexical Tokens (Abstracted)                                                */
/* ========================================================================== */

/* Identifiers */
ident         ::= ? [a-zA-Z][a-zA-Z0-9_]* | _[a-zA-Z0-9_]+ ? ;

/* Literals */
int_lit       ::= ? -?[0-9]+ ? ;
float_lit     ::= ? -?[0-9]+\.[0-9]+([eE][+-]?[0-9]+)? ?
                | ? -?[0-9]+[eE][+-]?[0-9]+ ? ;
string_lit    ::= ? "..." ? ;
char_lit      ::= ? '.' ? ;
bool_lit      ::= "true" | "false" ;

/* ========================================================================== */
/* Top Level Structure                                                        */
/* ========================================================================== */

module        ::= { item } ;

item          ::= function_def
                | struct_def
                | enum_def
                | impl_block
                | trait_def
                | trait_impl
                | use_decl
                | mod_decl
                | tensor_decl_stmt
                | datalog_rule
                | stmt ;                /* Top-level statements (script mode) */

/* ========================================================================== */
/* Declarations                                                               */
/* ========================================================================== */

/* Function Definition */
function_def  ::= [ "pub" ] [ "extern" ] "fn" ident [ generic_params ] "(" [ fn_args ] ")" [ "->" type ] ( block | ";" ) ;

fn_args       ::= "self" [ "," fn_arg_list ]
                | fn_arg_list
                | ; /* empty */

fn_arg_list   ::= fn_arg { "," fn_arg } ;
fn_arg        ::= ident ":" type ;

/* Struct Definition */
struct_def    ::= [ "pub" ] "struct" ident [ generic_params ] "{" [ struct_fields ] "}" ;
struct_fields ::= struct_field { "," struct_field } [ "," ] ;
struct_field  ::= ident ":" type ;

/* Enum Definition */
enum_def      ::= [ "pub" ] "enum" ident [ generic_params ] "{" [ enum_variants ] "}" ;
enum_variants ::= enum_variant { "," enum_variant } [ "," ] ;
enum_variant  ::= ident "(" type_list ")"               /* Tuple variant */
                | ident "{" struct_fields "}"             /* Struct variant */
                | ident "[" type ";" int_lit "]"          /* Array variant */
                | ident                                   /* Unit variant */
                ;

/* Implementation Block */
impl_block    ::= "impl" [ generic_params ] type "{" { function_def } "}" ;

/* Trait Definition */
trait_def     ::= [ "pub" ] "trait" ident [ generic_params ] "{" { trait_item } "}" ;
trait_item    ::= trait_method
                | "type" ident ";" ;                       /* Associated type */

trait_method  ::= "fn" ident "(" [ fn_args ] ")" [ "->" type ] ( block | ";" ) ;
                /* block = default body; ";" = abstract signature */

/* Trait Implementation Block */
trait_impl    ::= "impl" [ generic_params_with_bounds ] path [ generic_args ] "for" type [ where_clause ] "{" { trait_impl_item } "}" ;
trait_impl_item ::= function_def
                  | "type" ident "=" type ";" ;            /* Associated type binding */

/* Module & Use Declarations */
mod_decl      ::= "mod" ident ";" ;
use_decl      ::= "use" use_path ";" ;

use_path      ::= use_segment { "::" use_segment } ;
use_segment   ::= ident | "*" ;

/* Datalog Rule (Logic Programming) */
datalog_rule  ::= datalog_atom ( ":-" datalog_body ( "." | ";" ) | ( "." | ";" ) ) ;

datalog_body  ::= logic_literal { "," logic_literal } ;
logic_literal ::= [ "!" | "not" ] datalog_atom ;
datalog_atom  ::= ( ident | "true" | "false" ) [ "(" expr_list ")" ] ;

/* Tensor Declaration (standalone) */
tensor_decl_stmt ::= "tensor" ident ":" type [ "=" expr ] ";" ;

/* ========================================================================== */
/* Statements                                                                 */
/* ========================================================================== */

stmt          ::= let_stmt
                | assign_stmt
                | return_stmt
                | while_stmt
                | loop_stmt
                | for_stmt
                | break_stmt
                | continue_stmt
                | match_stmt
                | expr_stmt ;

/* Variable Declaration */
let_stmt      ::= "let" [ "mut" ] ident [ ":" type ] "=" expr ";"
                | "let" [ "mut" ] ident "[" ident_list "]" "=" expr ";" ; /* Sugar for tensor comprehension */

/* Assignment */
assign_stmt   ::= lvalue assign_op expr ";" ;
assign_op     ::= "=" | "+=" | "-=" | "*=" | "/=" | "%=" ;

lvalue        ::= ( ident | "self" ) { lvalue_postfix } ;
lvalue_postfix ::= "[" expr { "," expr } "]"      /* Index Access */
                 | "." ident                        /* Field Access */
                 | "." int_lit                      /* Tuple Field Access */
                 ;

/* Flow Control Statements */
return_stmt   ::= "return" [ expr ] ";" ;
break_stmt    ::= "break" ";" ;
continue_stmt ::= "continue" ";" ;

while_stmt    ::= "while" expr block ;
loop_stmt     ::= "loop" block ;
for_stmt      ::= "for" ident "in" expr block ;

/* Match Statement (wraps match expr; semicolon optional) */
match_stmt    ::= match_expr [ ";" ] ;

/* Expression Statement */
expr_stmt     ::= expr [ ";" ] ; /* Semicolon optional for block-like expressions (if, match, block) */

/* ========================================================================== */
/* Expressions                                                                */
/* ========================================================================== */

expr          ::= range_expr ;

block         ::= "{" { stmt } [ expr ] "}" ;

if_expr       ::= "if" expr block [ "else" ( block | if_expr ) ]
                | "if" "let" pattern "=" expr block [ "else" ( block | if_expr ) ] ;

match_expr    ::= "match" expr_no_struct "{" { match_arm } "}" ;
match_arm     ::= pattern "=>" expr [ "," ] ;

/* Expression without top-level struct literal (used for match scrutinee) */
expr_no_struct ::= range_expr ; /* same chain but struct init is disabled */

/* Precedence Hierarchy (Lowest to Highest) */

range_expr    ::= logic_or [ ".." [ logic_or ] ]   /* expr..expr, expr.. */
                | ".." logic_or                      /* ..expr (bare .. is error) */
                ;

logic_or      ::= logic_and { "||" logic_and } ;
logic_and     ::= bitwise_or { "&&" bitwise_or } ;

bitwise_or    ::= bitwise_xor { "|" bitwise_xor } ;
bitwise_xor   ::= bitwise_and { "^" bitwise_and } ;
bitwise_and   ::= comparison { "&" comparison } ;

comparison    ::= term { cmp_op term } ;
cmp_op        ::= "==" | "!=" | "<" | ">" | "<=" | ">=" ;

term          ::= factor { term_op factor } ;
term_op       ::= "+" | "-" ;

factor        ::= cast_expr { factor_op cast_expr } ;
factor_op     ::= "*" | "/" | "%" ;

cast_expr     ::= unary { "as" type } ;

unary         ::= ( "-" | "!" | "?" ) unary
                | postfix ;

postfix       ::= atom { postfix_op } ;
postfix_op    ::= "(" [ expr_list ] ")"   /* Function / Method Call */
                | "[" expr { "," expr } "]" /* Indexing (multi-index) */
                | "." ident               /* Field Access or Method target */
                | "." int_lit             /* Tuple Access (.0, .1, ...) */
                | "?"                     /* Try operator */
                ;

/* Atomic Expressions */
atom          ::= int_lit | float_lit | string_lit | char_lit | bool_lit
                | ident
                | path_expr               /* Static Call, Struct Init, Enum Variant */
                | "self"
                | "$" ident               /* Logic Variable */
                | "_"                     /* Wildcard */
                | "(" expr_or_tuple ")"
                | tensor_comp_or_lit
                | block
                | if_expr
                | match_expr
                | closure_expr ;          /* Closure: |args| body */

expr_or_tuple ::= /* empty */
                | expr { "," expr } ;     /* (expr) = grouping, (expr, expr, ...) = tuple */

path_expr     ::= primitive_type "::" ident "(" [ expr_list ] ")"  /* Primitive static call */
                | path [ "{" struct_init_fields "}" ]               /* Struct Init or path */
                | path "(" [ expr_list ] ")"                        /* Static method call */
                | path ;                                            /* Enum variant (unit) */

struct_init_fields ::= ident ":" expr { "," ident ":" expr } [ "," ] ;

/* ── Closure Expression ──────────────────────────────────────────────────── */
/*
 * Closures capture variables from the enclosing scope.
 * Syntax:
 *   |x, y| x + y                               (single expression body)
 *   |x: i64, y: i64| -> i64 { x + y }          (typed args, return type, block body)
 *   || println("hello")                         (no args)
 */
closure_expr  ::= "|" [ closure_args ] "|" [ "->" type ] closure_body ;

closure_args  ::= closure_arg { "," closure_arg } ;
closure_arg   ::= ident [ ":" type ] ;         /* type annotation is optional */

closure_body  ::= block                         /* { stmts; expr } */
                | expr ;                         /* single expression */

/* Tensor Literals & Comprehensions */
tensor_comp_or_lit ::= "[" tensor_inner "]" ;

tensor_inner  ::= expr_list                          /* Literal: [1, 2, 3] */
                | ident_list "|" comp_clauses ;      /* Comprehension: [i, j | ...] */

comp_clauses  ::= comp_item { "," comp_item } [ "," ] [ block ] ;
comp_item     ::= ident "<-" expr /* Generator */
                | expr ;          /* Condition */

/* ========================================================================== */
/* Types                                                                      */
/* ========================================================================== */

type          ::= fn_type
                | primitive_type
                | tensor_type
                | grad_tensor_type
                | ptr_type
                | array_type
                | tuple_type
                | path ;

primitive_type ::= "f32" | "f64"
                 | "i8" | "i16" | "i32" | "i64"
                 | "u8" | "u16" | "u32" | "u64"
                 | "bool" | "usize" | "void"
                 | "String" | "Char" ;

tensor_type   ::= "Tensor" "<" type "," int_lit ">" ;

grad_tensor_type ::= "GradTensor" "<" type "," int_lit ">" ;

ptr_type      ::= "ptr" "<" type ">" ;

array_type    ::= "[" type ";" int_lit "]" ;

tuple_type    ::= "(" [ type { "," type } ] ")" ;

/* Function / Closure Type */
fn_type       ::= "Fn" "(" [ type_list ] ")" "->" type ;

path          ::= ident [ generic_args ] { "::" ident [ generic_args ] } ;

/* ========================================================================== */
/* Helpers                                                                    */
/* ========================================================================== */

generic_params ::= "<" ident_list ">" ;
generic_args   ::= "<" type_list ">" ;

/* Generic Parameters with Trait Bounds */
generic_params_with_bounds ::= "<" generic_param_bound { "," generic_param_bound } ">" ;
generic_param_bound        ::= ident [ ":" trait_bound { "+" trait_bound } ] ;

trait_bound   ::= ident [ generic_args ] ;     /* e.g. Display, Iterator<i64> */

/* Where Clause */
where_clause  ::= "where" where_predicate { "," where_predicate } ;
where_predicate ::= ident ":" trait_bound { "+" trait_bound } ;

ident_list     ::= ident { "," ident } ;
type_list      ::= type { "," type } ;
expr_list      ::= expr { "," expr } ;

/* Patterns */
pattern       ::= "_"
                | literal
                | path [ pattern_data ] ;

pattern_data  ::= "(" pattern_var_list ")"    /* Tuple Variant Pattern */
                | "{" pattern_fields "}"      /* Struct Variant Pattern */
                ;                             /* Unit Variant (no data) */

pattern_var_list ::= pattern_var { "," pattern_var } ;
pattern_var      ::= ident | "_" ;

pattern_fields ::= pattern_field { "," pattern_field } [ "," ] ;
pattern_field  ::= ident [ ":" ident ] ;   /* Shorthand: { field } == { field: field } */
