src/compiler/parser.rs
// src/compiler/parser.rs
use crate::compiler::ast::*;
use crate::compiler::error::ParseErrorKind;
use crate::compiler::lexer::{Token, SpannedToken}; // Import Lexer
use nom::{
    branch::alt,
    combinator::{map, opt, value, cut},
    multi::{many0, separated_list0, separated_list1},
    sequence::{delimited, pair, preceded, tuple},
    IResult,
};

// Input is a slice of SpannedTokens
pub type Input<'a> = &'a [SpannedToken];

// --------------------------------------------------------------------------------
// [CRITICAL WARNING]
// DO NOT INTRODUCE `&self` SYNTAX.
//
// In TL, structs are Handles (implied pointers). Passing `self` passes the Handle (pointer).
// Passing `&self` would pass the Address of the Handle (pointer to pointer), causing
// Runtime Segfaults because the runtime expects a direct Handle value.
//
// Reference: User Request 2026-02-02
// --------------------------------------------------------------------------------

// Custom parsing error
// We need to map nom errors to our structures
#[derive(Debug, PartialEq)]
pub struct ParserError<'a> {
    pub input: Input<'a>,
    pub kind: ParseErrorKind,
}

impl<'a> nom::error::ParseError<Input<'a>> for ParserError<'a> {
    fn from_error_kind(input: Input<'a>, kind: nom::error::ErrorKind) -> Self {
        ParserError {
            input,
            kind: ParseErrorKind::Nom(kind),
        }
    }

    fn append(_: Input<'a>, _: nom::error::ErrorKind, other: Self) -> Self {
        other
    }
}

// Helper: Get Span from Input (current token or EOF)
// ファイル名は呼び出し元 (parse_from_source 等) で TlError::with_file() を使い後付けする。
fn get_span(input: Input) -> crate::compiler::error::Span {
    if let Some(tok) = input.first() {
        crate::compiler::error::Span::new(
            tok.span.line,
            tok.span.column,
        )
    } else {
        // EOF
        crate::compiler::error::Span::default()
    }
}

// Combinator: Spanned
pub fn spanned<'a, F, O>(mut parser: F) -> impl FnMut(Input<'a>) -> IResult<Input<'a>, Spanned<O>, ParserError<'a>>
where
    F: FnMut(Input<'a>) -> IResult<Input<'a>, O, ParserError<'a>>,
{
    move |input: Input<'a>| {
        let start_span = get_span(input);
        let (rest, value) = parser(input)?;
        // End span is tricky if rest is empty (EOF). 
        // We can approximate by taking start_span of the *consumed* tokens?
        // Or just use the start_span for now. Spanned usually wants ranges.
        // But compiler::error::Span is just line/col point? 
        // No, it's usually start point? 
        // Let's assume start point is enough for now or I need end point tracking.
        Ok((rest, Spanned::new(value, start_span)))
    }
}

// Combinator: Match specific token
pub fn expect_token(expected: Token) -> impl Fn(Input) -> IResult<Input, Input, ParserError> {
    move |input: Input| {
        match input.first() {
            Some(tok) if tok.token == expected => Ok((&input[1..], &input[0..1])),
            _ => Err(nom::Err::Error(ParserError {
                input,
                kind: ParseErrorKind::UnexpectedToken(format!("{:?}", expected)),
            })),
        }
    }
}

// Match identifier
pub fn identifier(input: Input) -> IResult<Input, String, ParserError> {
    match input.first() {
        Some(tok) => match &tok.token {
            Token::Identifier(s) => Ok((&input[1..], s.clone())),
            _ => Err(nom::Err::Error(ParserError {
                input,
                kind: ParseErrorKind::UnexpectedToken("Identifier".to_string()),
            })),
        },
        None => Err(nom::Err::Error(ParserError {
            input,
            kind: ParseErrorKind::UnexpectedToken("EOF".to_string()),
        })),
    }
}


// Helper: Match anything that satisfies predicate
pub fn satisfy_token<F>(pred: F) -> impl Fn(Input) -> IResult<Input, SpannedToken, ParserError> 
where F: Fn(&Token) -> bool {
    move |input: Input| {
        match input.first() {
            Some(tok) if pred(&tok.token) => Ok((&input[1..], tok.clone())),
            _ => Err(nom::Err::Error(ParserError {
                input,
                kind: ParseErrorKind::UnexpectedToken("satisfy".to_string()),
            })),
        }
    }
}

// --- Types ---




fn parse_primitive_type(input: Input) -> IResult<Input, Type, ParserError> {
    alt((
        value(Type::F32, expect_token(Token::F32Type)),
        value(Type::F64, expect_token(Token::F64Type)),
        value(Type::I8, expect_token(Token::I8Type)),
        value(Type::I16, expect_token(Token::I16Type)),
        value(Type::I32, expect_token(Token::I32Type)),
        value(Type::I64, expect_token(Token::I64Type)),
        value(Type::U8, expect_token(Token::U8Type)),
        value(Type::U16, expect_token(Token::U16Type)),
        value(Type::U32, expect_token(Token::U32Type)),
        value(Type::U64, expect_token(Token::U64Type)),
        value(Type::Bool, expect_token(Token::BoolType)),
        value(Type::Usize, expect_token(Token::UsizeType)),
        value(Type::Void, expect_token(Token::VoidType)),
        value(Type::String("String".to_string()), expect_token(Token::StringType)),
        value(Type::Char("Char".to_string()), expect_token(Token::CharType)),
    ))(input)
}

fn parse_tensor_type(input: Input) -> IResult<Input, Type, ParserError> {
    // Tensor<type, rank>
    // Token::Identifier("Tensor") ? No, Identifier("Tensor")
    // But lexer might see Tensor as Identifier cause it's not a keyword.
    // Yes.
    
    // We match Identifier("Tensor")
    let (input, _) = satisfy_token(|t| matches!(t, Token::Identifier(s) if s == "Tensor"))(input)?;
    let (input, _) = expect_token(Token::Lt)(input)?;
    let (input, inner) = parse_type(input)?;
    let (input, _) = expect_token(Token::Comma)(input)?;
    let (input, rank) = match input.first() {
        Some(tok) => match tok.token {
            Token::IntLiteral(n) => Ok((&input[1..], n as usize)),
            _ => Err(nom::Err::Error(ParserError { input, kind: ParseErrorKind::UnexpectedToken("Expected Int Rank".to_string()) })),
        },
        None => Err(nom::Err::Error(ParserError { input, kind: ParseErrorKind::UnexpectedToken("EOF".to_string()) })),
    }?;
    let (input, _) = expect_token(Token::Gt)(input)?;
    
    Ok((input, Type::Tensor(Box::new(inner), rank)))
}

fn parse_ptr_type(input: Input) -> IResult<Input, Type, ParserError> {
    // We match Identifier("ptr")
    let (input, _) = satisfy_token(|t| matches!(t, Token::Identifier(s) if s == "ptr"))(input)?;
    let (input, _) = expect_token(Token::Lt)(input)?;
    let (input, inner) = parse_type(input)?;
    let (input, _) = expect_token(Token::Gt)(input)?;
    
    Ok((input, Type::Ptr(Box::new(inner))))
}

fn parse_array_type(input: Input) -> IResult<Input, Type, ParserError> {
    // [Type; Size]
    let (input, _) = expect_token(Token::LBracket)(input)?;
    let (input, inner) = parse_type(input)?;
    let (input, _) = expect_token(Token::SemiColon)(input)?;
    let (input, size) = match input.first() {
        Some(tok) => match tok.token {
            Token::IntLiteral(n) => Ok((&input[1..], n as usize)),
            _ => Err(nom::Err::Error(ParserError { input, kind: ParseErrorKind::UnexpectedToken("Expected array size (integer)".to_string()) })),
        },
        None => Err(nom::Err::Error(ParserError { input, kind: ParseErrorKind::UnexpectedToken("EOF".to_string()) })),
    }?;
    let (input, _) = expect_token(Token::RBracket)(input)?;
    Ok((input, Type::Array(Box::new(inner), size)))
}

pub fn parse_type(input: Input) -> IResult<Input, Type, ParserError> {
    alt((
        parse_primitive_type,
        parse_tensor_type,
        parse_ptr_type,
        parse_array_type,
        // Reference type: &Type - REMOVED (not in spec)
        // map(
        //     preceded(expect_token(Token::Ampersand), parse_type),
        //     |t| Type::Ref(Box::new(t))
        // ),

        // Tuple type: (Type, Type, ...)
        map(
            delimited(
                expect_token(Token::LParen),
                separated_list0(expect_token(Token::Comma), parse_type),
                expect_token(Token::RParen),
            ),
            Type::Tuple,
        ),
        parse_type_path,
    ))(input)
}

fn parse_type_path(input: Input) -> IResult<Input, Type, ParserError> {
    // Check for "Ref" or other keywords that might be identifiers?
    // User type path: Ident<G>::Ident<G>
    let (mut rest, first) = identifier(input)?;
    let mut segments = vec![first];
    let mut generics = vec![];
    
    // Generics on first segment
    if let Ok((r, _)) = expect_token(Token::Lt)(rest) {
         if let Ok((r2, args)) = separated_list1(expect_token(Token::Comma), parse_type)(r) {
             if let Ok((r3, _)) = expect_token(Token::Gt)(r2) {
                 rest = r3;
                 generics = args;
             }
         }
    }

    loop {
        if let Ok((r, _)) = expect_token(Token::DoubleColon)(rest) {
             if let Ok((r2, seg)) = identifier(r) {
                 rest = r2;
                 segments.push(seg);
                 
                 // Generics on segment
                 if let Ok((r3, _)) = expect_token(Token::Lt)(rest) {
                     if let Ok((r4, args)) = separated_list1(expect_token(Token::Comma), parse_type)(r3) {
                         if let Ok((r5, _)) = expect_token(Token::Gt)(r4) {
                             rest = r5;
                             generics = args;
                         }
                     }
                 }
             } else {
                 break;
             }
        } else {
             break;
        }
    }
    
    Ok((rest, Type::Path(segments, generics)))
}


// --- Literals ---
pub fn parse_literal(input: Input) -> IResult<Input, Expr, ParserError> {
    let (input, token) = satisfy_token(|t| matches!(t, 
        Token::IntLiteral(_) | Token::FloatLiteral(_) | Token::StringLiteral(_) | Token::CharLiteral(_) | Token::True | Token::False
    ))(input)?;
    
    let kind = match token.token {
        Token::IntLiteral(n) => ExprKind::Int(n),
        Token::FloatLiteral(f) => ExprKind::Float(f),
        Token::StringLiteral(s) => ExprKind::StringLiteral(s),
        Token::CharLiteral(c) => ExprKind::CharLiteral(c),
        Token::True => ExprKind::Bool(true),
        Token::False => ExprKind::Bool(false),
        _ => unreachable!(),
    };
    
    Ok((input, Spanned::new(kind, crate::compiler::error::Span::new(token.span.line, token.span.column))))
}





fn parse_tensor_literal(input: Input) -> IResult<Input, Expr, ParserError> {
    let (input, _) = expect_token(Token::LBracket)(input)?;
    let (input, exprs) = split_delimited(input)?;
    Ok((input, Spanned::new(ExprKind::TensorLiteral(exprs), crate::compiler::error::Span::default())))
}

fn parse_tensor_comprehension_or_literal(input: Input) -> IResult<Input, Expr, ParserError> {
    // [ ... ]
    let (rest, _) = expect_token(Token::LBracket)(input)?;
    
    // Check for comprehension: indices | ...
    // Requires lookahead or trial.
    // Try to parse indices (identifiers) then pipe.
    // But identifiers are invalid syntax for tensor literal unless they are variables?
    // Ambiguity: [ a, b ] (literal vec of vars) vs [ a, b | ... ] (indices).
    // Try parse indices + Pipe.
    
    let comp_attempt: IResult<Input, (Vec<String>, Vec<crate::compiler::ast::ComprehensionClause>, Option<Expr>), ParserError> = (move |input| {
        let (input, indices) = separated_list1(expect_token(Token::Comma), identifier)(input)?;
        let (input, _) = expect_token(Token::Pipe)(input)?;
        // Commit to comprehension
        cut(move |input| {
             // Parse clauses and body mixed?
             // List of items separated by comma.
             let (input, items) = separated_list0(expect_token(Token::Comma), |input| {
                 // Try Generator: ident <- expr
                 if let Ok((rest, name)) = identifier(input) {
                     if let Ok((rest2, _)) = expect_token(Token::LArrow)(rest) {
                         let (rest3, range) = parse_expr(rest2)?;
                         return Ok((rest3, (Some(crate::compiler::ast::ComprehensionClause::Generator{name, range}), None)));
                     }
                 }
                 // Try Expr (Condition or Body)
                 let (rest, expr) = parse_expr(input)?;
                 Ok((rest, (None, Some(expr))))
             })(input)?;

             // Check for optional comma
             let (input, _) = opt(expect_token(Token::Comma))(input)?;

             // 4. Check for trailing block (body) { ... }
             // This supports syntax like [ ... | cond { body } ] without comma
             let (input, items) = if let Ok((_, _)) = expect_token(Token::LBrace)(input) {
                  // Found braces, parse as block expr
                  let (rest, body_expr) = parse_block(input)?;
                  let mut new_items = items;
                  new_items.push((None, Some(body_expr)));
                  (rest, new_items)
             } else {
                  (input, items)
             };
             
             // Process items
             let mut clauses = vec![];
             let mut body = None;
             
             for (clause, expr) in items {
                 if let Some(c) = clause {
                     clauses.push(c);
                 } else if let Some(e) = expr {
                     // If it is block, assume body?
                     // Or if it is the last item?
                     // For now, if we have multiple exprs, all but last are conditions?
                     // Or body is implicit?
                     // Test: { i + j }. Block.
                     match e.inner {
                         ExprKind::Block(_) => {
                             if body.is_some() {
                                 // Second block? Condition?
                                 clauses.push(crate::compiler::ast::ComprehensionClause::Condition(e));
                             } else {
                                 body = Some(e);
                             }
                         }
                         _ => {
                              clauses.push(crate::compiler::ast::ComprehensionClause::Condition(e));
                         }
                     }
                 }
             }
             
             Ok((input, (indices.clone(), clauses, body)))
        })(input)
    })(rest);

    match comp_attempt {
        Ok((rest, (indices, clauses, body_box))) => {
            let (rest, _) = expect_token(Token::RBracket)(rest)?;
             Ok((rest, Spanned::new(ExprKind::TensorComprehension { indices, clauses, body: body_box.map(Box::new) }, crate::compiler::error::Span::default())))
        }
        Err(nom::Err::Error(_)) => {
            // Not a comprehension (or syntax error before cut).
            // Try literal.
            // Rewind input to after LBracket? No, parse_tensor_literal expects LBracket.
            // Call parse_tensor_literal(input).
            parse_tensor_literal(input)
        }
        Err(e) => Err(e) // Failure
    }
}

// Helper for tensor literal content to avoid cut issues if I don't use cut yet
// Actually, standard separated_list0 is fine.
fn split_delimited(input: Input) -> IResult<Input, Vec<Expr>, ParserError> {
    let (input, exprs) = separated_list0(expect_token(Token::Comma), parse_expr)(input)?;
    let (input, _) = expect_token(Token::RBracket)(input)?;
    Ok((input, exprs))
}

// --- Expressions ---

// Forward declarations using recursive parsers
pub fn parse_expr(input: Input) -> IResult<Input, Expr, ParserError> {
    parse_binary_logic(input, true) // Entry point for precedence
}

fn parse_block(input: Input) -> IResult<Input, Expr, ParserError> {
    let (input, stmts) = parse_block_stmts(input)?;
    Ok((input, Spanned::new(ExprKind::Block(stmts), crate::compiler::error::Span::default())))
}





fn parse_path_based_atom(input: Input, allow_struct: bool) -> IResult<Input, Expr, ParserError> {
    // 1. Try Primitive Type first: i64::method()
    if let Ok((rest, ty)) = parse_primitive_type(input) {
        // Primitive type found. Expect :: method
        if let Ok((rest2, _)) = expect_token(Token::DoubleColon)(rest) {
            let (rest3, method) = identifier(rest2)?;
            // Check for Static Method Call: i64::method(...)
            if let Ok((rest4, _)) = expect_token(Token::LParen)(rest3) {
                let (rest5, args) = separated_list0(expect_token(Token::Comma), parse_expr)(rest4)?;
                let (rest6, _) = expect_token(Token::RParen)(rest5)?;
                return Ok((rest6, Spanned::new(ExprKind::StaticMethodCall(ty, method, args), crate::compiler::error::Span::default())));
            }
        }
        // If just primitive without ::, it's not a path atom we handle here (e.g. just "i64" is not expr).
        return Err(nom::Err::Error(ParserError { input, kind: ParseErrorKind::UnexpectedToken("Expected :: after primitive".to_string()) }));
    }

    // 2. Parse User Defined Path: Ident<G> :: Ident<G> ...
    // Parse first identifier
    let (mut rest, first) = identifier(input)?;
    let mut path_segments = vec![first];
    let mut generics: Vec<Type> = vec![];
    
    // Check for generics after first identifier: Type<T, U>
    if let Ok((rest2, _)) = expect_token(Token::Lt)(rest) {
        // Parse generics
        let (rest3, generic_args) = separated_list1(expect_token(Token::Comma), parse_type)(rest2)?;
        let (rest4, _) = expect_token(Token::Gt)(rest3)?;
        generics = generic_args;
        rest = rest4;
    }
    
    // Collect :: identifier<generics>? segments
    loop {
        if let Ok((rest2, _)) = expect_token(Token::DoubleColon)(rest) {
            if let Ok((rest3, seg)) = identifier(rest2) {
                path_segments.push(seg);
                rest = rest3;
                // Check for generics after this segment
                if let Ok((rest4, _)) = expect_token(Token::Lt)(rest) {
                    if let Ok((rest5, generic_args)) = separated_list1(expect_token(Token::Comma), parse_type)(rest4) {
                        if let Ok((rest6, _)) = expect_token(Token::Gt)(rest5) {
                            generics = generic_args;
                            rest = rest6;
                        }
                    }
                }
            } else {
                break;
            }
        } else {
            break;
        }
    }
    
    // Determine the pattern:
    // - Followed by ( ... ) -> Static Method or Fn Call
    // - Followed by { ... } -> Struct Init
    
    // Type::Path creation
    let path_ty = Type::Path(path_segments.clone(), generics.clone());

    if let Ok((rest2, _)) = expect_token(Token::LParen)(rest) {
        // Function/Static method call
        let (rest3, args) = separated_list0(expect_token(Token::Comma), parse_expr)(rest2)?;
        let (rest4, _) = expect_token(Token::RParen)(rest3)?;
        
        if path_segments.len() >= 2 {
            // Static method call: Type::method() or mod::Type::method()
            // We need to split into Type and Method.
            // But with Type::Path, it is ambiguous until semantics.
            // But StaticMethodCall expects Type and Method String.
            // Current AST ExprKind::StaticMethodCall(Type, String, Vec)
            // We can assume last segment is method name?
            // "Type::method" -> Type::Path(["Type"]), "method"
            
            let method = path_segments.last().unwrap().clone();
            let mut type_path = path_segments.clone();
            type_path.pop(); // Remove method
            
            // If type_path is empty, it was a single function call, but we checked len >= 2.
            let ty = Type::Path(type_path, generics);
            
            return Ok((rest4, Spanned::new(ExprKind::StaticMethodCall(ty, method, args), crate::compiler::error::Span::default())));
        } else {
            // Single identifier + () -> FnCall
            // But wait, path_segments[0] is the function name.
            let _func_name = path_segments[0].clone();

            if !generics.is_empty() {
                 return Err(nom::Err::Error(ParserError { input, kind: ParseErrorKind::UnexpectedToken("Generic function calls not supported yet".to_string()) }));
            }
            
            return Err(nom::Err::Error(ParserError { input, kind: ParseErrorKind::UnexpectedToken("Not a path atom (single ident)".to_string()) }));
        }
    }
    
    if allow_struct {
        if let Ok((rest2, _)) = expect_token(Token::LBrace)(rest) {
            // Struct Init: Type { ... }
            // Use path_ty as the type.
             
            let (rest3, fields) = separated_list0(
                expect_token(Token::Comma),
                map(
                    tuple((identifier, expect_token(Token::Colon), parse_expr)),
                    |(id, _, e)| (id, e)
                )
            )(rest2)?;
            let (rest3, _) = opt(expect_token(Token::Comma))(rest3)?;
            let (rest4, _) = expect_token(Token::RBrace)(rest3)?;
            
            // ExprKind::StructInit now takes Type
            return Ok((rest4, Spanned::new(ExprKind::StructInit(path_ty, fields), crate::compiler::error::Span::default())));
        }
    }

    // Check for Enum Variant without args: Type::Variant
    if path_segments.len() >= 2 {
        // Treat as Static Method Call with empty args? Or should AST have EnumVariant?
        // Existing code: StaticMethodCall(ty, variant, [])
        let variant = path_segments.last().unwrap().clone();
        let mut type_path = path_segments.clone();
        type_path.pop();
        
        let ty = Type::Path(type_path, generics);
        return Ok((rest, Spanned::new(ExprKind::StaticMethodCall(ty, variant, vec![]), crate::compiler::error::Span::default())));
    }
    
    // Single identifier without suffix - handled by parse_variable
    Err(nom::Err::Error(ParserError { input, kind: ParseErrorKind::UnexpectedToken("Not a path atom".to_string()) }))
}

fn parse_variable(input: Input) -> IResult<Input, Expr, ParserError> {
    let (input, name) = identifier(input)?;
    Ok((input, Spanned::new(ExprKind::Variable(name), crate::compiler::error::Span::default())))
}

fn parse_atom(input: Input, allow_struct: bool) -> IResult<Input, Expr, ParserError> {
    alt((
        parse_literal,
        parse_tensor_comprehension_or_literal,
        parse_block,
        parse_block,
        parse_if_expr,
        parse_match_expr,
        |i| parse_path_based_atom(i, allow_struct), // Explicit closure to pass flag
        map(
            delimited(
                expect_token(Token::LParen),
                separated_list0(expect_token(Token::Comma), parse_expr),
                expect_token(Token::RParen),
            ),
            |exprs| {
                if exprs.len() == 1 {
                    // (expr) -> expr (preserve span?)
                    exprs[0].clone()
                } else {
                    // Tuple
                    Spanned::new(ExprKind::Tuple(exprs), crate::compiler::error::Span::default())
                }
            }
        ),
        parse_variable,
        parse_self,
        parse_logic_var,
        parse_wildcard,
    ))(input)
}

fn parse_wildcard(input: Input) -> IResult<Input, Expr, ParserError> {
    let (input, _) = expect_token(Token::Underscore)(input)?;
    Ok((input, Spanned::new(ExprKind::Wildcard, crate::compiler::error::Span::default())))
}

fn parse_logic_var(input: Input) -> IResult<Input, Expr, ParserError> {
    let (input, _) = expect_token(Token::Dollar)(input)?;
    let (input, name) = identifier(input)?;
    Ok((input, Spanned::new(ExprKind::LogicVar(name), crate::compiler::error::Span::default())))
}
